--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ https://td22-6.game-collection.ovh/index.php?page=$1 [QSA,L]
+RewriteRule ^(.*)$ ./index.php?page=$1 [QSA,L]
